--- a/Goober.RabbitMq.Host/Goober.RabbitMq.Host.csproj
+++ b/Goober.RabbitMq.Host/Goober.RabbitMq.Host.csproj
@@ -1,11 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="EasyNetQ" Version="6.3.1" />
-  </ItemGroup>
 
 </Project>
