--- a/Goober.RabbitMq.WebApi/Goober.RabbitMq.WebApi.csproj
+++ b/Goober.RabbitMq.WebApi/Goober.RabbitMq.WebApi.csproj
@@ -10,7 +10,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Goober.RabbitMq.Api\Goober.RabbitMq.Api.csproj" />
-    <ProjectReference Include="..\Goober.RabbitMq.DAL.Abstractions\Goober.RabbitMq.DAL.Abstractions.csproj" />
+    <ProjectReference Include="..\Goober.RabbitMq.DAL.MsSql\Goober.RabbitMq.DAL.MsSql.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="C:\Users\DenisPortable\.nuget\packages\goober.web\3.1.0.1\contentFiles\any\netcoreapp3.1\nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
