--- a/Goober.RabbitMq.Producer/Goober.RabbitMq.Producer.csproj
+++ b/Goober.RabbitMq.Producer/Goober.RabbitMq.Producer.csproj
@@ -6,12 +6,14 @@
 
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="6.3.1" />
+    <PackageReference Include="Goober.Core" Version="2.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Goober.RabbitMq.Api\Goober.RabbitMq.Api.csproj" />
     <ProjectReference Include="..\Goober.RabbitMq.Host\Goober.RabbitMq.Host.csproj" />
   </ItemGroup>
 
